# ocaml-langid

./: .gitignore  LICENSE  README.md  dune  dune-project  langid.mli  ocaml_langid.opam  prepare_model_serialization.py
models/: classes_info.json  nb_pc.npy  nb_ptc.npy
src/: dune  game.ml  game.mli  interface.ml  langid.ml  langid.mli  langid_lib.ml  langid_lib.mli  models.ml  models.mli  sampler.ml  sampler.mli  utils.ml
tests/: dune  tests.ml
