(library
  (name models)
  (modules
    models
    )
   (libraries
   core
   core_unix
   core_unix.sys_unix
   stdio
   torch
   owl
   yojson)
   (preprocess 
   (pps 
    bisect_ppx
    ppx_jane
    ppx_deriving_yojson)))

(library
  (name game)
  (modules
    game
    )
   (libraries
   core
   core_unix
   core_unix.sys_unix
   stdio
   torch
   owl
   models
   ))
    

(executable
  (name langid)
  (modules
    langid)
  (preprocess
    (pps ppx_deriving_yojson))
  (libraries
    core
    core_unix
    core_unix.sys_unix
    stdio
    yojson
    ppx_deriving_yojson.runtime
    models
    game))
