(library
  (name utils)
  (modules
    utils
  )
  (libraries
    core
    core_unix
    core_unix.sys_unix
    stdio
    yojson
  )
  (preprocess 
  (pps 
    ppx_jane
    ppx_deriving_yojson)
  )
)


(library
  (name models)
  (modules
    models
    )
   (libraries
   core
   owl
   utils
   )
   (preprocess 
   (pps 
    bisect_ppx
   )))

(library
  (name game)
  (modules
    game
    )
   (libraries
   core
   core_unix
   core_unix.sys_unix
   stdio
   models
   utils
   ))
    

(executable
  (name langid)
  (modules
    langid)
  (preprocess
    (pps ppx_deriving_yojson))
  (libraries
    core
    core_unix
    core_unix.sys_unix
    stdio
    yojson
    ppx_deriving_yojson.runtime
    models
    game))
