(library
  (name utils)
  (modules
    utils
  )
  (libraries
    core
    core_unix
    core_unix.sys_unix
    stdio
    yojson
  )
  (preprocess 
  (pps
    bisect_ppx 
    ppx_jane
    ppx_deriving_yojson)
  )
)

(library
  (name sampler)
  (modules
    sampler
    )
   (libraries
    core
    lwt_ssl
    cohttp-lwt-unix
    cohttp-async
    utils
   )
   (preprocess 
   (pps 
    bisect_ppx
   )))


(library
  (name models)
  (modules
    models
    )
   (libraries
   core
   owl
   utils
   core_unix
   core_unix.sys_unix
   )
   (preprocess 
   (pps 
    bisect_ppx
   )))

(library
  (name game)
  (modules
    game
    )
   (libraries
   core
   core_unix
   core_unix.sys_unix
   stdio
   models
   sampler
   utils
   )
   (preprocess 
   (pps 
    bisect_ppx
   )))
    

(executable
  (name langid)
  (modules
    langid)
  (preprocess
    (pps ppx_deriving_yojson))
  (libraries
    core
    core_unix
    core_unix.sys_unix
    stdio
    yojson
    ppx_deriving_yojson.runtime
    models
    game
    minicli))
